# agl-container-manager

./: .gitignore  Makefile.am  README.md  configure.ac
container/: cluster.json  guest-wayland.json  ivi.json
src/: ConfigElement.cpp  ConfigElement.hpp  ContainerBase.hpp  ContainerCommand.hpp  ContainerCommands.cpp  ContainerCommands.hpp  ContainerConfig.cpp  ContainerConfig.hpp  ContainerElement.cpp  ContainerElement.hpp  Makefile.am  agl-container-manager.cpp  container-runtime.hpp  lxc-runtime.cpp  lxc-runtime.hpp
